--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
+include(GenerateExportHeader)
+
 project(TinyDNNProtobuf CXX)
 set(CMAKE_CXX_STANDARD 11)
 
@@ -9,4 +11,5 @@ conan_basic_setup(TARGETS)
 find_package(Protobuf 3.6.1 REQUIRED)
 
 add_subdirectory(messages)
+add_subdirectory(src)
 enable_testing()
