working from python

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 cmake_minimum_required(VERSION 3.1)
 
-add_library(tiny_dnn_c c_api.cpp c_api.h protobuf_serialization.hpp)
+add_library(tiny_dnn_c SHARED c_api.cpp c_api.h protobuf_serialization.hpp)
 target_link_libraries(tiny_dnn_c PUBLIC messages CONAN_PKG::tiny-dnn)
 generate_export_header(tiny_dnn_c EXPORT_FILE_NAME ${CMAKE_CURRENT_BINARY_DIR}/tiny_dnn_c_api.h)
 target_include_directories(tiny_dnn_c
