--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 cmake_minimum_required(VERSION 3.1)
 
-add_library(tiny_dnn_c SHARED c_api.cpp c_api.h protobuf_serialization.hpp)
+add_library(tiny_dnn_c SHARED c_api.cpp c_api.h protobuf_serialization.hpp func_wrapper.hpp)
 target_link_libraries(tiny_dnn_c PUBLIC messages CONAN_PKG::tiny-dnn)
 generate_export_header(tiny_dnn_c EXPORT_FILE_NAME ${CMAKE_CURRENT_BINARY_DIR}/tiny_dnn_c_api.h)
 target_include_directories(tiny_dnn_c
@@ -9,4 +9,4 @@ target_include_directories(tiny_dnn_c
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>/src
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
-
+set_property(TARGET tiny_dnn_c PROPERTY CXX_STANDARD 14)
